full-moon/tests/roblox_cases/fail/parser/const_no_assignment/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/roblox_cases/fail/parser/const_no_assignment
---
error[ast]: const declaration must have an assignment
  ┌─ source.lua:1:1
  │
1 │ const x
  │ ^^^^^^^
